<resources>
    <string name="app_name">MTG Cube Draft Simulator</string>
    <string name="logo_description">logo</string>
    <string name="dbase_name">mtgCubeSimDB</string>

    <!--Login Activity Strings-->
    <string name="login_title_text">MTG Cube Draft Simulator Login</string>
    <string name="email_sign_in">Email/Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>

    <!--error messages-->
    <string name="dialog_password_encryption_warning">WARNING\nThis application stores passwords. Passwords ARE encrypted, however, you should not reuse passwords across accounts. Please, for the love of all things holy, make a unique password.</string>
    <string name="dialog_password_encryption_warning_confirm">OK</string>
    <string name="dialog_draft_complete_confirm">Take me to that sweet deck!</string>
    <string name="create_account_error_text">All Fields Are Required</string>
    <string name="email_sign_in_error_text">Email Or Password Was Incorrect or there is not an account with this email.</string>
    <string name="account_exists_error">An account already exists with this email.</string>

    <!--MainActivity Strings-->
    <string name="main_activity_title">MTG Cube Draft Simulator</string>
    <string name="cube_choice">Choose Your Adventure</string>

    <!--Cube Strings-->
    <string name="new_cube_activity_title">New Cube</string>
    <string name="my_cubes_activity_title">My Cubes</string>
    <string name="new_cube_widget_button_text">New Cube</string>
    <string name="my_cubes_widget_button_text">My Cubes</string>
    <string name="my_cubes_no_cubes_instructions">Okay, don\'t panic. You have some options here. Well, you have only 1 option. You need to make a cube… Push the button to do that. It\'s easy. Trust me.</string>
    <string name="my_cubes_monster_text">OH NO!\nYou have no cubes!</string>
    <string name="my_cubes_intro_blurb">Here is a handy dandy list off all you\'re amazing Cubes! Click an arrow to see the cards and draft!</string>
    <string name="building_cube">We\'re gathering the cards, just a moment please.</string>
    <string name="creating_cube">Creating your cube, hang tight.</string>

    <!--Drafts-->
    <string name="my_drafts_activity_title">Drafts</string>
    <string name="my_drafts_monster_text">OH NO!\nYou have no drafts!</string>
    <string name="my_drafts_intro_blurb">Look at all these sweet drafts!</string>
    <string name="no_drafts_button_go_to_cubes">Go to My Cubes</string>
    <string name="no_drafts_button_make_a_cube">Make a cube</string>
    <string name="my_drafts_no_cubes_instructions">Okay, don\'t panic. You have some options here. Well, you have only 1 option. You need to make a cube… Push the button to do that. It\'s easy. Trust me.</string>
    <string name="my_drafts_no_drafts_instructions">Okay, don\'t panic. You have some options here. Well, you have only 1 option. You need to make a draft using a cube… Push the button to do that. It\'s easy. Trust me.</string>
    <string name="creating_draft">Creating your draft,\nhang tight.</string>

    <!--menus-->
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_save_cube">Save Cube</string>


    <!--Cube Review Strings-->
    <string name="cube_review_info_text">You can review the cards in your cube here. When you\'re ready, click the save icon then make a draft.</string>
    <string name="start_over_button_text">Start Over</string>
    <string name="create_draft_button_text">Create Draft</string>
    <string name="delete_cube_button_text">Delete Cube</string>
    <string name="cube_review_my_cubes_button">My Cubes</string>
    <string name="cube_built_base_percent">0%</string>
    <string name="step_1_title">Step 1:</string>
    <string name="new_draft_instructions">Name your Draft then click the super big generate button.</string>
    <string name="generate_an_awesome_draft_button">Generate An Awesome Draft</string>
    <string name="draft_name_hint">Draft Name</string>
    <string name="cube_name_hint">Cube Name</string>
    <string name="new_cube_instructions">Name your Cube then click the super big generate button.</string>
    <string name="generate_an_awesome_cube_button">Generate An Awesome Cube</string>
    <string name="draft_instructions_text">Click a card to make it larger. You can draft it by clicking the \"Draft Me\" button</string>
    <string name="mtg_card_scale_transition_name">mtgCardScale</string>
    <string name="mtg_card_content_description">mtg card</string>
    <string name="new_cube_button_text">New Cube</string>
    <string name="my_cubes_button_text">My Cubes</string>
    <string name="appwidget_text">MTG Cube Draft Cubes</string>
    <string name="add_widget">Add widget</string>
    <string name="mana_symbol_description">Mana Symbol</string>
    <string name="magic_the_gathering_arena_logo_description">Magic The Gathering Arena Logo</string>
    <string name="make_a_cube_text">Make A Super Awesome Cube</string>
    <string name="warning_icon_description">warning icon</string>
    <string name="draft_me_button_text">I WANT THIS CARD OMG! DRAFT IT!</string>
    <string name="list_item_select_icon_description">list item select icon</string>
    <string name="make_a_cube_text_2">Make A Super Awesome Cube</string>
    <string name="draft_done_info">Well, you did it. You drafted. Review your deck and then push the done button to do it all over again.</string>
    <string name="all_done_button_text">All Done</string>
    <string name="draft_complete_dialog_text">Congratulations! You did it! You completed this draft, click continue to see your brand new shiny draft deck.</string>
    <string name="go_back_button_text">Go back to deck</string>
    <string name="go_home_menu_text">Go Home</string>
    <string name="you_have_no_cubes_go_make_some_empty_view_text">You have no cubes. Go make some.</string>
    <string name="one_sec_grabbing_your_cube">One sec, grabbing your cards.</string>


    <string name="draft_deck_review">Draft Deck Review</string>
    <string name="woot">WOOT!</string>
    <string name="the_cube_has_no_name">You must give your cube a name to continue</string>
    <string name="no_internet">OH NO! Looks like you don\'t have an internet connection. Try again later i guess.</string>


</resources>
