<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margins_8"
        android:text="@string/appwidget_text"/>

    <Button
        android:id="@+id/new_cube_widget_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appwidget_text"
        android:text="@string/new_cube_widget_button_text"/>

    <Button
        android:id="@+id/my_cubes_widget_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_cube_widget_button"
        android:text="@string/my_cubes_widget_button_text" />

</RelativeLayout>