<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:dots="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="?android:attr/actionBarSize">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <TextView
            android:id="@+id/info_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margins_8"
            android:layout_marginTop="@dimen/margins_8"
            android:layout_marginEnd="@dimen/margins_8"
            android:text="@string/cube_review_info_text"
            android:textSize="@dimen/text16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cube_multi_function_button"
            style="@style/CubeChoiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margins_8"
            android:layout_marginTop="@dimen/margins_8"
            android:text="@string/start_over_button_text"
            app:layout_constraintEnd_toStartOf="@+id/cube_go_to_my_cubes_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cube_go_to_my_cubes_button"
            style="@style/CubeChoiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margins_8"
            android:layout_marginTop="@dimen/margins_8"
            android:layout_marginEnd="@dimen/margins_8"
            android:text="@string/cube_review_my_cubes_button"
            app:layout_constraintEnd_toStartOf="@+id/create_draft_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cube_multi_function_button"
            app:layout_constraintTop_toBottomOf="@+id/info_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_draft_button"
            style="@style/CubeChoiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins_8"
            android:layout_marginEnd="@dimen/margins_8"
            android:text="@string/create_draft_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cube_go_to_my_cubes_button"
            app:layout_constraintTop_toBottomOf="@+id/info_text" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margins_8"
            android:background="@color/toastBackgroundColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cube_multi_function_button" />


        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins_8"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cube_cards_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                tools:itemCount="3"
                tools:listitem="@layout/list_item_cube_review_card">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/blocker"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/windowBackground"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/arena_logo"
            android:layout_marginTop="@dimen/margins_60"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:src="@drawable/mtg_arena_logo"
            android:contentDescription="@string/magic_the_gathering_arena_logo_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins_60"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text22"
            android:text="@string/one_sec_grabbing_your_cube"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arena_logo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>