<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_300">

    <LinearLayout
        android:id="@+id/emailPasswordFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins_16"
        android:layout_marginTop="@dimen/margins_8"
        android:layout_marginEnd="@dimen/margins_8"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/margins_16"
        android:paddingRight="@dimen/margins_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createAccountEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createAccountPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailPasswordButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailPasswordFields"
        android:layout_marginStart="@dimen/margins_8"
        android:layout_marginEnd="@dimen/margins_8"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/margins_16"
        android:paddingRight="@dimen/margins_16"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailPasswordFields">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createAccountButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="@dimen/layout_300"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins_16"
            android:layout_marginEnd="@dimen/margins_4"
            android:text="@string/create_account"
            android:theme="@style/LoginButton" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>